# base_crud_fastapi

./: README.md  alembic.ini  example.env  pyproject.toml
migration/: env.py
migration/versions/: 2024_07_25_1803-d56a968b21fc_table_for_user_task_file_task.py
src/: exceptions.py  main.py
src/base/: settings.py
src/base/base_models/: db_models.py
src/base/db_settings/: db_helper.py
src/base_crud/: base_consts.py  base_controller.py  base_meta_class.py  base_repository.py  base_router.py  base_service.py
src/mediafile/task_file/: cff05f35-805b-4abb-a287-ace5300d0fb7  cff05f35-805b-4abb-a287-ace5300d0fb7.metadata.json
src/task/: api.py  controllers.py  models.py
src/task/schemas/: task_schemas.py
src/user/: api.py  controllers.py  models.py  repository.py  service.py
src/user/schemas/: user_schemas.py
